--- a/project/src/main/resources/templates/admin/ad_main.html
+++ b/project/src/main/resources/templates/admin/ad_main.html
@@ -48,7 +48,7 @@
       <aside class="sidebar p-4 vh-100">
         <h5 class="mb-4">관리자 페이지</h5>
         <nav class="nav flex-column gap-1">
-            <a class="nav-link" th:href="@{/admin}">📊 매출 조회</a>
+            <a class="nav-link active" th:href="@{/admin}">📊 매출 조회</a>
             <a class="nav-link" th:href="@{/admin/usermanage}">👥 회원 관리</a>
             <a class="nav-link" th:href="@{/admin/service}">⚙️ 서비스 및 시설 관리</a>
             <a class="nav-link" th:href="@{/admin/trainer}">🏇 훈련사 관리</a>
