카카오 결제 후 버튼 막힘

--- a/project/src/main/resources/templates/fragments/link.html
+++ b/project/src/main/resources/templates/fragments/link.html
@@ -17,3 +17,15 @@
 <th:block th:fragment="find-link">
     <link rel="stylesheet" href="/css/find.css">
 </th:block>
+
+<th:block th:fragment="success-link">
+    <link rel="stylesheet" href="/css/success.css">
+</th:block>
+
+<th:block th:fragment="fail-link">
+    <link rel="stylesheet" href="/css/fail.css">
+</th:block>
+
+<th:block th:fragment="cancel-link">
+    <link rel="stylesheet" href="/css/cancel.css">
+</th:block>
