--- a/project/src/main/resources/templates/kakaopay/fail.html
+++ b/project/src/main/resources/templates/kakaopay/fail.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>결제 실패</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <th:block th:replace="~{fragments/link::link}"></th:block>
+    <th:block th:replace="~{fragments/link::fail-link}"></th:block>
 </head>
 <body>
-    <h2>❌ 결제에 실패하였습니다.</h2>
-    <p>다시 시도해 주세요.</p>
-    <a href="/mypage">마이페이지로 돌아가기</a>
+    <th:block th:replace="~{fragments/header::header}"></th:block>
+    <div class="fail-header">
+        <div class="success-header-inner">
+            <h2>결제에 실패하였습니다.</h2>
+            <img src="/img/fail.jpg" class="fail-img">
+            <p>다시 시도해 주세요.</p>
+            <a href="/mypage" class="btn btn-outline-secondary">돌아가기</a>
+        </div>
+    </div>
 </body>
 </html>
