--- a/project/src/main/resources/templates/kakaopay/success.html
+++ b/project/src/main/resources/templates/kakaopay/success.html
@@ -3,13 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>결제 완료</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <th:block th:replace="~{fragments/link::link}"></th:block>
+    <th:block th:replace="~{fragments/link::success-link}"></th:block>
+
+
 </head>
 <body>
-    <h2>✅ 결제가 완료되었습니다!</h2>
-    <p>상품명 : <span th:text="${approve.item_name}"></span></p>
-    <p>결제 금액 : <span th:text="${approve.amount.total}"></span> 원</p>
-    <p>결제 수단 : <span th:text="${approve.payment_method_type}"></span></p>
-    <p>결제 시각 : <span th:text="${approve.approved_at}"></span></p>
-    <a href="/mypage">마이페이지로 돌아가기</a>
+<th:block th:replace="~{fragments/header::header}"></th:block>
+    
+    <div class="success-header">
+        <div class="success-header-inner">
+            <h2>결제가 완료되었습니다!</h2>
+            <img src="/img/success.jpg" class="success-img">
+            <p>상품명 : <span th:text="${approve.item_name}"></span></p>
+            <p>결제 금액 : <span th:text="${approve.amount.total}"></span> 원</p>
+            <p>결제 수단 : <span th:text="${approve.payment_method_type}"></span></p>
+            <p>결제 시각 : <span th:text="${approve.approved_at}"></span></p>
+            <a href="/mypage" class="btn btn-outline-secondary">돌아가기</a>
+        </div>
+    </div>
 </body>
 </html>
