--- a/project/src/main/resources/templates/fragments/link.html
+++ b/project/src/main/resources/templates/fragments/link.html
@@ -29,3 +29,7 @@
 <th:block th:fragment="cancel-link">
     <link rel="stylesheet" href="/css/cancel.css">
 </th:block>
+
+<th:block th:fragment="no403-link">
+    <link rel="stylesheet" href="/css/no403.css">
+</th:block>
