환불 시스템.

--- a/project/src/main/resources/templates/fragments/link.html
+++ b/project/src/main/resources/templates/fragments/link.html
@@ -33,3 +33,7 @@
 <th:block th:fragment="no403-link">
     <link rel="stylesheet" href="/css/no403.css">
 </th:block>
+
+<th:block th:fragment="refund-link">
+    <link rel="stylesheet" href="/css/refund.css">
+</th:block>
