--- a/project/src/main/resources/templates/login/login.html
+++ b/project/src/main/resources/templates/login/login.html
@@ -32,12 +32,14 @@
                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
                         
                         <div class="form-floating mb-2">
-                            <input type="text" class="form-control" id="username" name="username" value="" placeholder="아이디"
-                                  autofocus th:value="${username}">
+                            <input type="text" class="form-control" id="username" name="username" value="" placeholder="아이디" 
+                                   onkeydown="return noSpace(event)" oninput="removeSpace(this)"
+                                   autofocus th:value="${username}">
                             <label for="username">아이디</label>
                         </div>
                         <div class="form-floating">
-                            <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호">
+                            <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호" 
+                                   onkeydown="return noSpace(event)" oninput="removeSpace(this)">
                             <label for="password">비밀번호</label>
                         </div>
             
@@ -92,6 +94,21 @@
 
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- 아이디 입력 시 스페이스 입력 막기 -->
+    <script>
+        function noSpace(e) {
+            if (e.key === " ") {
+                e.preventDefault();
+                return false;
+            }
+            return true;
+        }
+
+        function removeSpace(input) {
+            input.value = input.value.replace(/\s/g, "");
+    }
+    </script>
 
 </body>
 </html>
