--- a/project/src/main/resources/templates/admin/ad_roominsert.html
+++ b/project/src/main/resources/templates/admin/ad_roominsert.html
@@ -65,10 +65,11 @@ body { background-color: #f5f6f7; }
                     </div>
 
                     <div class="mb-3">
-                        <label class="form-label">세부 사항</label>
+                        <label class="form-label">객실 타입</label>
                         <textarea class="form-control"
                                   name="etc"
-                                  rows="4"></textarea>
+                                  rows="4"
+                                  placeholder="소형견,중형견,대형견 타입중 하나를 입력해 주세요"></textarea>
                     </div>
 
                     <div class="mb-3">
