--- a/project/src/main/resources/templates/admin/ad_roomupdate.html
+++ b/project/src/main/resources/templates/admin/ad_roomupdate.html
@@ -148,7 +148,7 @@ document.getElementById("updateForm").addEventListener("submit", async function(
         alert("객실 정보가 수정되었습니다.");
         window.location.href = "/admin/service";
     } else {
-        alert("수정 실패: " + result);
+        alert("예약된 방이 있거나 오류가 있습니다." );
     }
 });
 	async function actionDelete() {
@@ -166,7 +166,7 @@ document.getElementById("updateForm").addEventListener("submit", async function(
           alert("객실이 삭제되었습니다.");
           location.href = "/admin/service";
         } else {
-          alert("객실 삭제에 실패하였습니다.")
+          alert("객실 삭제에 실패하였습니다. 예약된 내역이 있습니다.")
         }
 		
 		  } catch (err) {
